# Oreka

./: .gitignore  Vagrantfile
interactivetel/: README.md  Vagrantfile  devel.sh  install.sh  lib.sh  make-pkg.sh  sync.sh  uninstall.sh  version.txt
interactivetel/conf/: config-devel.xml  config.xml  localpartymap.csv  logging.properties
interactivetel/docs/: stereo-recordings.txt
interactivetel/pcaps/: CALL-PARK-IN-9546557744-9803528115(2019)-9803520932.pcap  DIRECT-HUNTGROUP-IN-8324782244-4903-HG4300-4317.pcap  DIRECT-IN-8324782244-4902-4319.pcap  DIRECT-OUT-4317-8324782244.pcap  OPUS-CODEC.pcap  OUTBOUNDS-WRONG-DIR.pcap  P-Asserted-Identity-IN-8324782244-2172287000-2530.pcap  RTP-NAT-5166066484-1103.pcap  WARM-HUNTGROUP-IN-8324782244-4902-HG4300-4317.pcap  WARM-IN-8324782244-4902-4317.pcap
interactivetel/pcaps/GRE-VNTAG/: GRE-ERSPAN-TYPE-I-VLAN-VNTAG.pcap  VLAN-VNTAG.pcap
orkaudio/: .autotools  .cproject  .gitignore  .project  Makefile.am  configure.in
orkaudio/audiocaptureplugins/common/: PacketHeaderDefs.h
orkaudio/audiocaptureplugins/voip/: VoIp.cpp
orkaudio/filters/g729codec/: G729Codec.cpp  Makefile.am
orkbasecxx/: .autotools  .cproject  .project  AudioCapture.h
orkbasecxx/audiofile/: OggOpusFile.cpp
